set cdn of images

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 <body>
 	<div id="gag">
-		<img src="bg.png" class="animate-pulse">
-		<div class="x"><img src="1.png"></div>
+		<img src="http://o7ze2s1ph.bkt.clouddn.com/gag/bg.png" class="animate-pulse">
+		<div class="x"><img src="http://o7ze2s1ph.bkt.clouddn.com/gag/1.png"></div>
 	</div>
 </body>
 </html>
